fix:CompletionRequest to ChatCompletionRequest