@@ -1,17 +1,20 @@
 package com.hazavao.nyteny.endpoint.rest.controller.health;
 
-import com.theokanning.openai.completion.CompletionRequest;
+import com.theokanning.openai.completion.chat.ChatCompletionRequest;
+import com.theokanning.openai.completion.chat.ChatMessage;
 import com.theokanning.openai.service.OpenAiService;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-@RestController("/health")
+import java.util.List;
+
+@RestController
 public class HazavaoController {
 
   private final String apiKey = System.getenv("OPENAI_API_KEY");
 
-  @GetMapping
+  @GetMapping("/")
   public String health() {
     return "OK";
   }
@@ -20,13 +23,14 @@ public class HazavaoController {
   public String getDefinition(@RequestParam String teny) {
     OpenAiService service = new OpenAiService(apiKey);
 
-    CompletionRequest request =
-        CompletionRequest.builder()
+    ChatMessage message = new ChatMessage("user", "Dikateny ny '" + teny + "' : ");
+
+    ChatCompletionRequest chatRequest = ChatCompletionRequest.builder()
             .model("gpt-3.5-turbo")
-            .prompt("Dikateny ny '" + teny + "' : ")
+            .messages(List.of(message))
             .maxTokens(50)
             .build();
 
-    return service.createCompletion(request).getChoices().getFirst().getText();
+    return service.createChatCompletion(chatRequest).getChoices().get(0).getMessage().getContent();
   }
 }
